--- a/feature/home/compose/build.gradle
+++ b/feature/home/compose/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 apply from: rootProject.file("gradle/view-common.gradle")
 
 dependencies {
+    implementation libs.play.services.ads
     implementation project(':common:model')
     implementation project(':viewCommon')
 }
