--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -61,3 +61,5 @@ test-core = 'androidx.test:core:1.4.0'
 arch-core-testing = 'androidx.arch.core:core-testing:2.1.0'
 # Debug
 timber = 'com.jakewharton.timber:timber:5.0.1'
+# Ads
+play-services-ads = 'com.google.android.gms:play-services-ads:21.0.0'
