--- a/settings.gradle
+++ b/settings.gradle
@@ -5,7 +5,7 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "App Template"
+rootProject.name = "AdMob in Compose"
 enableFeaturePreview("VERSION_CATALOGS")
 include ':app'
 include ':common:model'
