--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
-kotlin = '1.6.10'
-compose = '1.1.1'
+kotlin = '1.7.0'
+compose-compiler = '1.2.0'
+compose = '1.2.0-rc03'
 retrofit = '2.9.0'
 room = '2.4.2'
 coroutines = '1.6.3'
@@ -33,6 +34,7 @@ activity-compose = 'androidx.activity:activity-compose:1.5.0'
 compose-livedata = { module = 'androidx.compose.runtime:runtime-livedata', version.ref='compose' }
 preference = 'androidx.preference:preference-ktx:1.2.0'
 play-services-oss-licenses = 'com.google.android.gms:play-services-oss-licenses:17.0.0'
+customview-poolingcontainer = 'androidx.customview:customview-poolingcontainer:1.0.0-rc01'
 # Retrofit
 retrofit-retrofit = { module = 'com.squareup.retrofit2:retrofit', version.ref = 'retrofit' }
 retrofit-moshi = { module = 'com.squareup.retrofit2:converter-moshi', version.ref = 'retrofit' }
