--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,6 +29,7 @@ compose-ui-ui = { module = 'androidx.compose.ui:ui', version.ref = 'compose' }
 compose-material = { module = 'androidx.compose.material:material', version.ref = 'compose' }
 compose-ui-preview = { module = 'androidx.compose.ui:ui-tooling-preview', version.ref = 'compose' }
 compose-ui-tooling = { module = 'androidx.compose.ui:ui-tooling', version.ref = 'compose' }
+compose-ui-viewbinding = { module = 'androidx.compose.ui:ui-viewbinding', version.ref = 'compose' }
 navigation-compose = 'androidx.navigation:navigation-compose:2.5.0'
 activity-compose = 'androidx.activity:activity-compose:1.5.0'
 compose-livedata = { module = 'androidx.compose.runtime:runtime-livedata', version.ref='compose' }
