User can see native ads in the list.

--- a/feature/home/presentation/build.gradle
+++ b/feature/home/presentation/build.gradle
@@ -3,6 +3,7 @@ apply from: rootProject.file("gradle/view-common.gradle")
 apply from: rootProject.file("gradle/hilt.gradle")
 
 dependencies {
+    implementation libs.play.services.ads
     implementation project(':common:model')
     implementation project(':viewCommon')
     implementation project(':feature:home:compose')
