--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,29 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    signingConfigs {
+        release {
+            storeFile file("${System.getenv('HOME')}/admob_in_compose.jks")
+            storePassword System.getenv("AIC_STORE_PASSWORD")
+            keyAlias "app"
+            keyPassword System.getenv("AIC_KEY_PASSWORD")
+        }
+    }
+    buildTypes {
+        release {
+            shrinkResources true
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+            signingConfig signingConfigs.release
+
+            firebaseAppDistribution {
+                appId = System.getenv("FIREBASE_APP_ID")
+                releaseNotes = System.getenv("RELEASE_NOTE")
+                groups = "developers"
+            }
+        }
+    }
 }
 
 dependencies {
