--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,8 +23,8 @@ jobs:
       # Make release build and upload to DeployGate
       - run: ./gradlew uploadDeployGateRelease
         env:
-          TEMPLATE_STORE_PASSWORD: ${{ secrets.AIC_STORE_PASSWORD }}
-          TEMPLATE_KEY_PASSWORD: ${{ secrets.AIC_KEY_PASSWORD }}
+          AIC_STORE_PASSWORD: ${{ secrets.AIC_STORE_PASSWORD }}
+          AIC_KEY_PASSWORD: ${{ secrets.AIC_KEY_PASSWORD }}
           DEPLOYGATE_APP_OWNER_NAME: ${{ secrets.DEPLOYGATE_APP_OWNER_NAME }}
           DEPLOYGATE_API_TOKEN: ${{ secrets.DEPLOYGATE_API_TOKEN }}
           DEPLOYGATE_DISTRIBUTION_KEY: ${{ secrets.DEPLOYGATE_DISTRIBUTION_KEY }}
